Fix contrast and width issues on "now" alert

--- a/pipeline/source_assets/scss/_custom-variables.scss
+++ b/pipeline/source_assets/scss/_custom-variables.scss
@@ -9,3 +9,4 @@ $theme-colors: (
   "primary": #3A52A2
 ) !default;
 $enable-shadows: true;
+$alert-color-level: 10;
